# ZunaroDo

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  AI_STUDIO_AGENTS.md  AI_STUDIO_BUILD_NOTES.md  AI_STUDIO_CONTEXT.md  AI_STUDIO_PROMPT.md  AI_STUDIO_WEB_UI_STEPS.md  ANFORDERUNGEN.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPING.md  Dockerfile  LICENSE  MIGRATIONS.md  MOBILE.md  PAIRING.md  PAYMENT.md  PLAYSTORE.html  PLAYSTORE.md  PRIVACY.md  README.md  SECURITY.md  TESTING.html  TESTING.md  UI_CONCEPT.html  UI_CONCEPT.md  __main__.py  admin_tool_gui.py  alltagshelfer.spec  alltagshelfer_demo.db  assistant.py  buildozer.spec  contracts.py  database.py  diagnose.py  (+15 more)
.alltagshelfer-state/: device_id  sync_seen.json
GitHub AI Studio Prep/: AI_STUDIO_AGENTS.md  AI_STUDIO_BUILD_NOTES.md  AI_STUDIO_CONTEXT.md  AI_STUDIO_SYSTEM_INSTRUCTIONS.md  AI_STUDIO_WEB_UI_STEPS.md  REPO_SUMMARY.md  SECURITY.md  repo-analysis.json
app_core/: __init__.py  headless_app.py  helpers.py  presenters.py  profiles.py
ausgaben/: kuendigung_streaming_abo.eml
config/: legal-publisher.example.json
core/: __init__.py  interface.py  tooltip.py
docs/: ENABLE_CLOSED_TEST.md  ENABLE_GITHUB_PAGES.md  KONFIG_AUDIT.md  RELEASE_STATUS.md  TIMEZONE_AUDIT.md
legal/: AGB.md  AGB_en.md  DATENSCHUTZ.md  IMPRESSUM.md  IMPRESSUM_en.md  README.md  WIDERRUF.md  provider.yml
locales/: README.md  bg.json  cs.json  da.json  de.json  el.json  en.json  es.json  et.json  fi.json  fr.json  ga.json  hr.json  hu.json  it.json  lt.json  lv.json  mt.json  nl.json  pl.json  pt.json  ro.json  sk.json  sl.json  sv.json
mobile/: __init__.py  app.py  headless_app.py  helpers.py  presenters.py  privacy_onboarding.py  ui_text.py
modules/: __init__.py  calendar.py  contracts.py  daystructure.py  family.py  finance.py  inbox.py  notes.py  overview.py  profiles.py  search.py  social.py  statistics.py  templates.py
release/: CLOSED_TEST_EVIDENCE_TEMPLATE.md  CLOSED_TEST_RUNBOOK.md  DATA_SAFETY_CONSOLE_ANSWERS.md  DEVICE_SMOKE_CHECKLIST.md  GO_LIVE_TODO.md  OFFENE_MANUELLE_SCHRITTE.md  PLAY_CONSOLE_SETUP.md  PLAY_CONSOLE_SUBMISSION.md  closed-test-2026-05-30.md  create_upload_keystore.ps1  create_upload_keystore.sh  deploy-payment-server.md  payment-production-checklist.md  payment-server.env.example  play-android-1.0.0.md  playstore-snapshot-2026-05-20.md
scripts/: build-android.bat  build-android.sh  build-desktop.bat  build-desktop.sh  build-ios.sh  (+8 more)
(+226 files in other folders)
